# rgi

./: .gitignore  Cargo.toml  README.md
src/: client.rs  deepseek.rs  draft.rs  lib.rs  main.rs  providers.rs
src/deepseek/: completion.rs  completions.rs  primitives.rs  request.rs
src/providers/: anthropic.rs  common.rs  deepseek.rs
