[package]
name = "llm_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.4.0"
dotenv = "0.15.0"
